<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <EditText
            android:id="@+id/driversCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_edit_text"
            android:hint="@string/f_rarkod"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/employeeNameSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@string/arbetsgivare_nr"
            android:background="@drawable/round_edit_text"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:spinnerMode="dropdown"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/driverNameET"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/f_rarens_namn"
        android:background="@drawable/round_edit_text"
        android:inputType="textNoSuggestions"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/restTimeET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_edit_text"
            android:hint="@string/vilotid"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_edit_text"
            android:hint="@string/datum"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_edit_text"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/startTimeET1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:background="@null"
            android:hint="@string/fr_n_och_med_klockan"
            android:inputType="textNoSuggestions"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="0.04"
            android:background="@color/colorBlack" />

        <EditText
            android:id="@+id/endTimeET1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.48"
            android:background="@null"
            android:hint="@string/till_och_med_klockan"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_edit_text"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/startTimeET2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:background="@null"
            android:hint="@string/fr_n_och_med_klockan"
            android:inputType="textNoSuggestions"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="0.04"
            android:background="@color/colorBlack" />

        <EditText
            android:id="@+id/endTimeET2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.48"
            android:background="@null"
            android:hint="@string/till_och_med_klockan"
            android:inputType="textNoSuggestions"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/Rest_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/vilotidsrapport_nr"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/_2843701"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f00"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>
