<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toolsActivity.ToolsActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/verktyg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:fillViewport="false"
        app:layout_constraintTop_toBottomOf="@+id/title_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/employeeNameET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/f_rarkod"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/driverNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/f_rarens_namn"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/driverNameET1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/postadress_bostaden"
                android:inputType="textNoSuggestions"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/restTimeET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/mobiltelefon"
                    android:inputType="number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/telefon_bostaden"
                    android:inputType="number"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/employerNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/arbetsgivare_1"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/employerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/adress_och_telefon"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/employerNameET1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/arbetsgivare_2"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/employerAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/adress_och_telefon"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/employerNameET2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/arbetsgivare_3"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/employerAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_edit_text"
                    android:hint="@string/adress_och_telefon"
                    android:inputType="textNoSuggestions"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_button">

            <ImageView
                android:id="@+id/image_car"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/ic_car" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_car"
                android:layout_centerHorizontal="true"
                android:text="@string/aktuellt_k_rpass"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/save_driver_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_button">

            <ImageView
                android:id="@+id/image_download"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/ic_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_download"
                android:layout_centerHorizontal="true"
                android:text="@string/spara"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_button">

            <ImageView
                android:id="@+id/image_register"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/ic_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_register"
                android:layout_centerHorizontal="true"
                android:text="@string/regler"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>